--- a/Home.html
+++ b/Home.html
@@ -42,6 +42,29 @@
         <p id="re"></p>
 
     </div>
+    
+    <table border="solid 1px #9d9d9e" cellpadding="0" color="9d9d9e" cellspacing="0" style="margin-left: 650px;margin-top:-380px;height:400px;border-left-style:solid; border-bottom-style:none;border-right-style:none;border-top-style:none;">
+
+    <button class="again" onclick="finish()">刷新</button>
+
+    <h3 class="h31">玩法介绍</h3>
+
+    <hr width="400px" style="margin-left: 700px;FILTER: progid:DXImageTransform.Microsoft.Glow(color=#9d9d9e,strength=10)" color=#9d9d9e SIZE=1>
+
+    <p class="intro">
+        1. 输入想要吹爆的人的名字;<br>
+        2. 选择Ta的性别;<br>
+        3. 点击“确定”。
+    </p>
+
+    <h3 class="h32">Tips</h3>
+
+    <hr width="400px" style="margin-left: 700px;FILTER: progid:DXImageTransform.Microsoft.Glow(color=#9d9d9e,strength=10)" color=#9d9d9e SIZE=1>
+
+    <p class="intro">
+        1. 如果不选择性别会默认填写“男生”;<br>
+        2. 点击“刷新”查看更多彩虹屁。
+    </p>
 
 </body>
 
