--- a/Home.html
+++ b/Home.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>彩虹屁生成器</title>
+    <link rel="shortcut icon" href="./picture/favicon.ico ">
     <link rel="stylesheet" type="text/css" href="Home.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <meta name="keywords" content="实用工具，彩虹屁生成器，表白神器" />
     <meta name="robots" content="index,follow" />
-    <link rel="shortcut icon" href="./picture/favicon.ico ">
     <script src="./Home.js"></script>
 </head>
 
-<body>
+<body id="body">
 
     <div class="head">
 
@@ -42,10 +43,14 @@
         <p id="re"></p>
 
     </div>
-    
-    <table border="solid 1px #9d9d9e" cellpadding="0" color="9d9d9e" cellspacing="0" style="margin-left: 650px;margin-top:-380px;height:400px;border-left-style:solid; border-bottom-style:none;border-right-style:none;border-top-style:none;">
+
+    <table border="solid 1px #9d9d9e" cellpadding="0" color="9d9d9e" cellspacing="0" style="margin-left: 650px;margin-top:-410px;height:400px;border-left-style:solid; border-bottom-style:none;border-right-style:none;border-top-style:none;">
 
     <button class="again" onclick="finish()">刷新</button>
+
+    <i title="夜间模式" id="model1" class="fa fa-moon-o" style="cursor:pointer;font-size:45px;color:#a6c0e7;margin-left: 550px;margin-top: 21px;" onclick="c1()"></i>
+
+    <i title="日间模式" id="model2" class="fa fa-sun-o" style="display:none;cursor:pointer;font-size:45px;color:#a6c0e7;margin-top: 21px;margin-left: -40px;" onclick="c2()"></i>
 
     <h3 class="h31">玩法介绍</h3>
 
@@ -63,7 +68,8 @@
 
     <p class="intro">
         1. 如果不选择性别会默认填写“男生”;<br>
-        2. 点击“刷新”查看更多彩虹屁。
+        2. 点击“刷新”查看更多彩虹屁；<br>
+        3. 点击月亮/太阳符号可切换夜间/日间模式。
     </p>
 
 </body>
