--- a/Home.html
+++ b/Home.html
@@ -44,7 +44,7 @@
 
     </div>
 
-    <table border="solid 1px #9d9d9e" cellpadding="0" color="9d9d9e" cellspacing="0" style="margin-left: 650px;margin-top:-410px;height:400px;border-left-style:solid; border-bottom-style:none;border-right-style:none;border-top-style:none;">
+    <table id="tabl" border="solid 1px #9d9d9e" cellpadding="0" color="9d9d9e" cellspacing="0" style="margin-left: 650px;margin-top:-410px;height:400px;border-left-style:solid; border-bottom-style:none;border-right-style:none;border-top-style:none;">
 
     <button class="again" onclick="finish()">刷新</button>
 
